# gnssFGO_LIU

./: .gitignore  BRANCH_LAYOUT.md  CMakeLists.txt  OFFLINE_IMU_GNSS_CURRENT_VS_ORIGINAL.md  OFFLINE_IMU_GNSS_PRECISION_ENHANCEMENT.md  OFFLINE_LC_MINIMAL_BRANCH.md  README.md  README_ubuntu24.md  WORKFLOW_WINDOWS_WSL.md  run_offline.sh
config/: default_offline.cfg  rtkfix_only.cfg  transformed1cut1_error_state_feedback.cfg  transformed1cut1_error_state_stage1.cfg  transformed1cut1_segment_feedback_stage1.cfg  transformed1cut1_segment_feedback_stage1_specificforce_z0075.cfg  transformed1cut1_segment_feedback_stage1_specificforce_z0100.cfg  transformed1cut1_segment_feedback_stage1_specificforce_z0150.cfg  transformed1cut1_segment_feedback_stage1_specificforce_z0200.cfg  transformed1cut1_segment_feedback_stage1_vertical_fixed_sigma.cfg  transformed1cut1_segment_feedback_stage1_vertical_tight.cfg  transformed1cut1_segment_feedback_stage2.cfg  transformed1cut1_segment_feedback_stage2_vertical_acc_bias.cfg  transformed1cut1_segment_feedback_stage2_vertical_drift.cfg  transformed1cut1_segment_feedback_stage3.cfg  transformed1cut1_static100_global_bias_attitude_accel.cfg  transformed1cut1_static100_global_bias_attitude_accel_nostatforce.cfg  transformed1cut1_static100_global_bias_attitude_accel_nostatforce_accgeneric_mild.cfg  transformed1cut1_static100_global_bias_attitude_accel_nostatforce_accgeneric_strong.cfg  transformed1cut1_static100_global_bias_attitude_accel_nostatforce_specificforce1.cfg  transformed1cut1_static100_global_bias_attitude_accel_nostatforce_specificforce2.cfg  transformed1cut1_static100_global_bias_attitude_accel_nostatforce_specificforce3.cfg  transformed1cut1_static100_global_bias_attitude_accel_nostatforce_specificforce4.cfg  transformed1cut1_static100_global_bias_attitude_accel_nostatforce_tuned.cfg  transformed1cut1_static100_global_bias_attitude_accel_nostatforce_velonly.cfg  transformed1cut1_static100_global_bias_attitude_accel_nostatforce_velonly_mild.cfg  transformed1cut1_static100_global_bias_attitude_accel_nostatforce_velpos.cfg  transformed1cut1_static100_global_bias_attitude_accel_nostatforce_velpos_mild.cfg  transformed1cut1_static100_global_bias_attitude_accel_nostatforce_velpos_strong.cfg  transformed1cut1_static100_global_gyro_bias.cfg  transformed1cut1_static100_global_gyro_bias_attitude.cfg  transformed1cut1_static100_zaru_zupt.cfg  transformed1cut1_vertical_direct_z_phase1.cfg  transformed1cut1_vertical_envelope_phase10_segmented_jump_bias.cfg  transformed1cut1_vertical_envelope_phase11_body_z_nhc_strong.cfg  transformed1cut1_vertical_envelope_phase12_rtk_gate_only_full_nav.cfg  transformed1cut1_vertical_envelope_phase13_static_baz_carryover.cfg  transformed1cut1_vertical_envelope_phase14_static_baz_no_early_gate.cfg  transformed1cut1_vertical_envelope_phase15_static_baz_gm_tightened.cfg  transformed1cut1_vertical_envelope_phase16_static_rtk_height_anchor.cfg  (+35 more)
docker/: Dockerfile  compose.yaml
docs/: attitude_reference_split.md  body_frame_convention_transformed1rtkjumpcut1.md  current_vs_release_v1.0.md  current_vs_release_v1.3.md  current_vs_release_v1.4.md  current_vs_release_v1.5.md  current_vs_release_v2.0.md  iri_50m_workflow.md  offline_lc_minimal_v2_3_core_framework.docx  release_v1.1_notes.md  release_v1.2_notes.md  release_v1.3_notes.md  release_v1.4_notes.md  release_v1.5_notes.md  release_v2.0_notes.md  release_v2.1_notes.md  release_v2.2_notes.md  release_v2.3_notes.md  rtk_vertical_drift_reference_phase30.md  shared_vertical_reference_workflow.md  stage1_to_stage3_pipeline_and_modules.md  stage1_yaw_refinement.md  stage2_stage3_default_v2.3_workflow.md  stage2_velocity_optimization.md  vertical_recovery_current_framework.md
fgo_io_ros2/: README.md
offline_lc_minimal/: .gitignore  BRANCH_LAYOUT.md  CMakeLists.txt  README.md  README_ubuntu24.md  WORKFLOW_WINDOWS_WSL.md  bootstrap_ubuntu24.sh  toolchain.md
offline_lc_minimal/include/offline_lc_minimal/common/: Config.h  GeoUtils.h  Types.h
offline_lc_minimal/scripts/: plot_nav_vs_rtk.py
offline_lc_minimal/src/common/: Config.cpp
offline_lc_minimal/src/core/: OfflineBatchRunner.cpp
scripts/: build_v2_3_core_framework_doc.py  compute_iri_source_compare.py  plot_alignment_navigation_continuity.py  plot_attitude_comparison_no_bodyz_visible.m  plot_attitude_over_time.py  plot_body_z_bidirectional_jump_detection_adaptive.py  plot_error_state_trajectory.py  plot_forward_altitude_diagnostic.py  plot_forward_heading_diagnostic.py  plot_heading_vs_rtk.py  plot_initial_static_consistency.py  plot_nav_vs_rtk.py  plot_optimized_vertical_profile.py  plot_raw_imu_nav_vertical_acceleration_matlab.m  plot_segment_error_diagnostics.py  plot_shared_vertical_reference_profiles.py  plot_speed_vs_rtk.py  plot_stage2_vehicle_nhc.py  plot_stage_attitude_debug.py  plot_vertical_state_acceleration_matlab.m  plot_vertical_state_corrections_matlab.m  plot_vertical_velocity_delta_profile.py  stage2_iri50_calculator.m  stage2_lowpass_frequency_tuner.m  stage2_vertical_smoothing_engine.m
tests/: attitude_reference_constraint_test.cpp  body_z_bias_reestimate_csv_reader_test.cpp  body_z_bidirectional_jump_detector_test.cpp  body_z_nhc_constraint_test.cpp  config_test.cpp  gnss_factor_builder_test.cpp  gnss_preoutage_quality_override_test.cpp  late_static_detector_test.cpp  residual_contribution_analyzer_test.cpp  reweighted_combined_imu_factor_test.cpp  road_noise_state_estimator_test.cpp  rtk_outage_recovery_constraint_test.cpp  rtk_outage_window_planner_test.cpp  rtk_velocity_constraint_test.cpp  rtk_vertical_drift_reference_test.cpp  rtk_vertical_latent_reference_test.cpp  rtk_vertical_lowpass_reference_test.cpp  shared_vertical_reference_builder_test.cpp  stage1_yaw_refinement_test.cpp  stage2_velocity_optimization_test.cpp  stage3_shared_reference_mapper_test.cpp  stage3_vertical_reference_test.cpp  stage_attitude_reference_test.cpp  static_vertical_bias_constraint_test.cpp  test_plot_alignment_navigation_continuity.py  test_plot_attitude_over_time.py  test_plot_forward_altitude_diagnostic.py  (+13 more)
(+337 files in other folders)
